--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.3.1"
   },
   "devDependencies": {
+    "@jest-mock/express": "^2.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
