--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "mongoose": "^8.3.1",
+    "mysql2": "^3.9.5",
+    "sequelize": "^6.37.3",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.6",
+    "@types/sequelize": "^4.28.20",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
